srcs/telegraf_model.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    app: telegraf
spec:
  type: NodePort
  ports:
  - port: 4999
    nodePort: 4999
    protocol: TCP
    name: http
  selector:
    app: telegraf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  labels:
    app: telegraf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      containers:
      - name: telegraf
        image: telegraf_image
        ports:
        - containerPort: 4999
        imagePullPolicy: Never
        volumeMounts:
        - name: dockersock
          mountPath: "/var/run/docker.sock"
      volumes:
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
